# filesize-utility

./: Cargo.toml
src/: display_number.rs  explore.rs  get_entries.rs  main.rs  parse_args.rs
