[package]
name = "filesize-utility"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
byte-unit = { version = "4.0.14", default-features = false }
crossterm = "0.24.0"
enable-ansi-support = "0.1.2"
